<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_enter_six_digit_otp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="9898989898"
        android:id="@+id/tvMobileNo"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edtOTP"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:hint="@string/str_otp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:phoneNumber="true"
        android:maxLength="10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_continue"
        android:id="@+id/btnContinue"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/str_you_will_shortly_receive"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/str_regenerate_otp"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="5dp" />


</LinearLayout>
