<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_select_prefferd_bank"
        android:id="@+id/textView3"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_for_this_transaction"
        android:id="@+id/textView14"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSelectBank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <Button
        android:id="@+id/tvProceed"
        android:text="@string/str_proceed"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp" />
</LinearLayout>