<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment.ConfirmPaymentMethodFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center_horizontal"
                android:text="@string/str_your_easy"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal"
                android:background="@drawable/bg_squre_shadow">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="NPCI"
                        android:id="@+id/textView2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_national_pci"
                        android:id="@+id/textView4"
                        android:layout_weight="1"
                        android:gravity="center_horizontal" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@android:drawable/ic_secure"
                        android:layout_margin="5dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_please_authorize"
                    android:id="@+id/textView5"
                    android:layout_marginTop="15dp" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberPassword"
                    android:ems="10"
                    android:id="@+id/edtMPIN"
                    android:maxLength="4"
                    android:layout_marginTop="30dp"
                    android:imeOptions="actionDone"
                    android:hint="@string/str_enter_mpin" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_submit"
                    android:id="@+id/btnSubmit"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:layout_marginBottom="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_dont_have_mpin"
                android:id="@+id/tvGenMPIN"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_dont_share_mpin"
                android:id="@+id/textView7"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
