<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.benow.paypuriproto.fragment.PaymentSuccessFragment"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:padding="20dp"
            android:background="@drawable/bg_squre_shadow"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-5dp"
            android:layout_marginRight="-5dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/str_payment_success"
                android:id="@+id/textView6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_your_payment_went"
                android:id="@+id/textView8"
                android:gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:src="@drawable/amazonicon"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_transaction_details"
            android:id="@+id/textView17"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_order_number"
                    android:id="@+id/tv"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="67834834"
                    android:id="@+id/tvOrderNo"
                    android:padding="10dp"
                    android:layout_marginLeft="2dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_total_amount_paid"
                    android:id="@+id/textView15"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/tvAmountPaid"
                    android:padding="10dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_payee_details"
                android:id="@+id/textView18"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_payer_mobile"
                    android:id="@+id/textView11"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/tvPayerMobile"
                    android:padding="10dp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/str_payer_account"
                    android:id="@+id/textView13"
                    android:padding="10dp"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/tvAccountNo"
                    android:padding="10dp"
                    android:layout_marginLeft="2dp"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_okay"
            android:id="@+id/btnOkay"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="clip_horizontal|center_vertical|center_horizontal"
            android:layout_gravity="center_horizontal"
            android:id="@+id/llShareFriends">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_invite_to_friends"
                android:id="@+id/tvInvite"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textColor="@color/colorPrimary"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_share_24dp"
                android:layout_margin="5dp" />
        </LinearLayout>



    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_close"
        android:id="@+id/btnClose"
        android:background="@color/light_blue"
        android:textStyle="bold" />

</LinearLayout>
