<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/str_enter_mobile"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/edtMobileNo"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:hint="Mobile no"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:phoneNumber="true"
        android:maxLength="10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_continue"
        android:id="@+id/btnContinue"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" />


</LinearLayout>
